// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pageCard > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`pageCard > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">Body slot</div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring rounded-xl">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>Default slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="flex-1">
        <!--v-if-->
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description slot</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <div data-slot="footer" class="pt-4 mt-auto">Footer slot</div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <div data-slot="header" class="mb-4">Header slot</div>
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-error">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-info">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-ring-inverted">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-ring-inverted">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-secondary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-success">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-warning">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5">Leading slot</div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start order-last">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with orientation vertical reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start order-last">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with spotlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <div data-slot="spotlight" class="absolute inset-0 rounded-inherit pointer-events-none bg-background/90"></div>
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title slot</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Card link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted font-700">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant ghost correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant ghost highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant ghost to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with variant naked correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 p-0 sm:p-0">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant naked highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 p-0 sm:p-0">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant naked to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg outline-primary/25 has-[>a:focus-visible]:outline-3 transition">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 p-0 sm:p-0">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant outline highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant outline to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated/50 has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-muted mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant soft highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50 ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant soft to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50 outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-inverted color-text-inverted">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted color-text-inverted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant solid highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-inverted color-text-inverted ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted color-text-inverted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant solid to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-inverted color-text-inverted outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-inverted/90">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted color-text-inverted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-dimmed mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`pageCard > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50 ring ring-ring">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant subtle highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50 ring ring-ring ring-2 ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`pageCard > renders with variant subtle to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative flex rounded-lg bg-background-elevated/50 ring ring-ring outline-primary/25 has-[>a:focus-visible]:outline-3 transition hover:bg-background-elevated hover:ring-ring-accented has-[>a:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="container" class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div data-slot="wrapper" class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div data-slot="leading" class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class="size-5 shrink-0 color-primary"></svg></div>
      <div data-slot="body" class="flex-1">
        <div data-slot="title" class="text-base text-pretty font-600 color-text-highlighted">Title</div>
        <div data-slot="description" class="text-[15px] text-pretty color-text-toned mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;
